# docbox

./: .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  cspell.json  dev.squid.conf  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build-release.yml  build.yml  publish-docker-hub.yml  test.yml
containers/: BuildDocbox.Dockerfile  COMMANDS.md  Docbox.Dockerfile  OfficeConvertServer.Dockerfile  docker-compose.yml  prebuilt.alpine.Dockerfile  prebuilt.alpine.amd64.Dockerfile  prebuilt.alpine.arm64.Dockerfile  prebuilt.bookworm.Dockerfile  prebuilt.bookworm.amd64.Dockerfile  prebuilt.bookworm.arm64.Dockerfile  prebuilt.debian.Dockerfile
docs/: API.md  BUILD.md  BUILD_DOCKER.md  SETUP_AMI.md  SETUP_TERRAFORM_S3.md  TERRAFORM.md
scripts/: deploy.sh  ec2-docbox-setup.sh  ec2-initial-setup.sh  ec2-proxy-setup.sh  pull-logs.sh  ssh.sh
terraform/: .terraform.lock.hcl  ec2.tf  iam.tf  networking.tf  outputs.tf  search.tf  security_groups.tf  sqs.tf  variables.tf
