[workspace]
resolver = "2"
members = [
    "packages/docbox",
    "packages/docbox-core",
    "packages/docbox-search",
    "packages/docbox-database",
    "packages/docbox-secrets",
    "packages/docbox-web-scraper",
    "packages/docbox-management",
    "packages/docbox-processing",
]

[workspace.package]
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/docbox-nz/docbox"
readme = "./README.md"
license = "MIT"

[workspace.dependencies]
# Core business logic
docbox-core = { version = "0.6.0", path = "packages/docbox-core" }

# Database access
docbox-database = { version = "0.6.0", path = "packages/docbox-database" }

# File processing
docbox-processing = { version = "0.2.0", path = "packages/docbox-processing" }

# Search access
docbox-search = { version = "0.6.0", path = "packages/docbox-search" }

# Secret management
docbox-secrets = { version = "0.3.0", path = "packages/docbox-secrets" }

# Storage access
docbox-storage = { version = "0.3.0", path = "packages/docbox-storage" }

# Web scraping
docbox-web-scraper = { version = "0.4.0", path = "packages/docbox-web-scraper" }

# Async runtime
tokio = "=1.48.0"

# Futures utilities
futures = "=0.3.31"

# UUID v4 support
uuid = { version = "=1.18.1", features = ["v4", "serde"] }

# Date & time
chrono = { version = "=0.4.42", features = ["serde"] }

# Caching
moka = { version = "=0.12.11", features = ["future"] }

# Bytes type used for cheap shared bytes (and utilities)
bytes = "=1.10.1"
bytes-utils = "=0.1.4"

# Logging
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }

# Serialization and JSON
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
serde_with = "=3.15.0"

# Error handling
thiserror = "=2.0.17"

# Mime types, parsing, extension guessing, reverse mime lookup
mime = "=0.3.17"
mime_guess = "=2.0.5"
mime2ext = "=0.1.54"

# URL parsing
url = "=2.5.7"

# HTTP client
reqwest = { version = "=0.12.24", default-features = false, features = [
    "rustls-tls",
    "http2",
] }

# HTTP primitives
http = "=1.3.1"

# Validation
garde = { version = "=0.22.0", features = ["derive", "full"] }

# OpenAPI spec generation
utoipa = { version = "=5.4.0", features = [
    "url",
    "uuid",
    "chrono",
    "axum_extras",
] }

# AWS configuration
aws-config = { version = "=1.8.10", features = ["behavior-version-latest"] }

# HTML parser for OGP metadata and html to text conversion
tl = "=0.7.8"

# Base64 encoding and decoding
base64 = "=0.22.1"

# Iterator utilities
itertools = "=0.14.0"

testcontainers = "=0.25.0"
testcontainers-modules = "=0.13.0"
